about html added cors origin changed readme edited minor corrections
