# swagger.yaml
@@ -19,10 +19,10 @@ info:
   version: 1.0.11
 
 servers:
-  - url: https://petstore3.swagger.io/api/v1
+  - url: video-player-backend-production.up.railway.app/api
   
 tags:
-  - name: users
+  - name: user
     description: Everything about USERS
     externalDocs:
       description: Find out more
@@ -34,10 +34,10 @@ tags:
       url: http://swagger.io
 
 paths:
-  /users/register:
+  /user/register:
     post:
       tags:
-        - users
+        - user
       summary: Register a new user
       description: Register a new user through form with images
       operationId: userRegister
@@ -89,10 +89,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /users/login:
+  /user/login:
     post:
       tags:
-        - users
+        - user
       summary: Login a user
       description: Login user using JWT signing, generating accessToken and refreshToken
       operationId: userLogin
@@ -129,10 +129,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /users/logout:
+  /user/logout:
     post:
       tags:
-        - users
+        - user
       summary: Logs out the user
       description: >-
         SECURED ROUTE. Verifies accessToken. Deletes the accessToken & refreshToken from
@@ -145,20 +145,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /users/regen-access:
+  /user/regen-access:
     get:
       tags:
-        - users
+        - user
       summary: Regenerate accessToken when it gets expired
       description: Usually redirected if jwt verify returns 'expired'
       operationId: updatePetWithForm
       responses:
         '400':
           description: Invalid input
-  /users/update-img:
+  /user/update-img:
     post:
       tags:
-        - users
+        - user
       summary: Updates Cover Image and Avatar Image
       description: >-
         SECURED ROUTE. Verifies accessToken. New images are uploaded. Old images
@@ -176,10 +176,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /users/update-pass:
+  /user/update-pass:
     post:
       tags:
-        - users
+        - user
       summary: Updates the password of the user account
       description: >-
         SECURED ROUTE. Verifies accessToken. Old password is compared, New
@@ -200,10 +200,10 @@ paths:
                 additionalProperties:
                   type: integer
                   format: int32
-  /users/update-details:
+  /user/update-details:
     post:
       tags:
-        - users
+        - user
       summary: Update Full name. Username and Email not alterable.
       description: >-
         SECURED ROUTE. Verifies accessToken. Old password is compared, New
@@ -228,10 +228,10 @@ paths:
           description: Invalid input
         '422':
           description: Validation exception
-  /users/{userid}:
+  /user/{userid}:
     get:
       tags:
-        - users
+        - user
       summary: Get full User channel Profile
       description: When logged it, redirect to Home page with User Profile
       operationId: getOrderById
@@ -257,10 +257,10 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Order not found
-  /users/history:
+  /user/history:
     get:
       tags:
-        - users
+        - user
       summary: Watch History of User
       description: Get Watch history of the logged in User
       operationId: createUser
